			   XPCE ChangeLog
			   ==============

* ENHANCED: library(pce_toc).  Allow hooking collapse of a node.  See
  ->collapse_node.

VERSION 6.6.8, distributed with SWI-Prolog 5.6.8
================================================

* FIXED: PceEmacs: caret positioning issues on syntax errors in Prolog
  mode.

* ADDED: display->x11_threads.  Provides a work-around for MacOS X11
  problems.

VERSION 6.6.7, distributed with SWI-Prolog 5.6.7
================================================

* FIXED: Do not initialize XLib threads on MacOS to avoid a deadlock entering
  certain keys.  Reported several times.

* ADDED: Allow binding different X11 modifiers to the Meta Key.
  See display->meta_modifier.  By default bind Meta to the Mac command-key.


VERSION 6.6.6, distributed with SWI-Prolog 5.6.6
================================================

* FIXED: Bug#146: Unicode handling of window->drop_files.  Dmitry.


VERSION 6.6.4, distributed with SWI-Prolog 5.6.4
================================================

* FIXED: offset issue in win_printer.  Tom Conlon.

* FIXED: DCG for manual operations.

* ENHANCED: Operator handling in PceEmacs Prolog mode.


VERSION 6.6.3, distributed with SWI-Prolog 5.6.3
================================================

* ENHANCED: PceEmacs colouring: more aggressive colouring of the current
  clause.

* ADDED: Bug#136: actually use directory argument in display<-win_directory.
  Holger Kanwischer.


VERSION 6.6.1, distributed with SWI-Prolog 5.6.1
================================================

* COMPAT: changed library(find_file) to confirm on overwrite on both the
  private file prompter and the Windows one.  Jelmer Jellema.

VERSION 6.6.0, distributed with SWI-Prolog 5.6.0
================================================

VERSION 6.5.39, distributed with SWI-Prolog 5.5.39
==================================================

* ADDED: pce_prolog_xref.pl: process terms in :- include directives.
